codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workflow_invalid_json_error.snap
---
source: tui/src/chatwidget/tests/workflows.rs
expression: "lines_to_single_string(&cells[0])"
---
■ Invalid workflow JSON arguments: key must be a string at line 1 column 2. Usage: /workflow <name> [JSON]
