codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workflow_oversized_json_error.snap
---
source: tui/src/chatwidget/tests/workflows.rs
expression: "lines_to_single_string(&cells[0])"
---
■ Workflow arguments exceed the 32768-byte limit.
