codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workflow_picker_error.snap
---
source: tui/src/chatwidget/tests/workflows.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Saved workflows
  The workflow registry could not be refreshed.

›    Could not load saved workflows  registry unavailable detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail detail detail detail detail detail detail detail
                                     detail d…

  Press esc to go back
