codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workflow_picker_error_history.snap
---
source: tui/src/chatwidget/tests/workflows.rs
expression: "lines_to_single_string(&cells[0])"
---
■ Failed to load saved workflows: registry unavailable detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail d…
