codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workflow_starting.snap
---
source: tui/src/chatwidget/tests/workflows.rs
expression: "lines_to_single_string(&cells[0])"
---
• Starting saved workflow `release-audit`…
